petclinic_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
