ingress_petclinic.yaml
apiVersion: networking.k8s.io/v1beta1
#apiVersion: networking.k8s.io/v1 Ingress
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: petclinic-service
          servicePort: 8080
